--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,21 +25,22 @@ android {
     dataBinding {
         enabled = true
     }
+    buildToolsVersion '28.0.3'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "android.arch.persistence.room:runtime:$room_version"
-//    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     kapt "android.arch.persistence.room:compiler:$room_version"
+    kapt "androidx.databinding:databinding-compiler:3.2.1"
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    //    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 }
